Fix overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,17 @@ hr {
 }
 
 
-
+.scrollup {
+    width: 40px;
+    height: 40px;
+    opacity: 0.3;
+    position: fixed;
+    bottom: 50px;
+    right: 100px;
+    display: none;
+    text-indent: -9999px;
+    background: url('../pics/icon_top.png') no-repeat;
+}
 
 
 
